<resources>
    <string name="app_name">SoptSeminar_week1</string>
    <string name="user_name">SeojinSeojin</string>
    <string name="user_profile">user_profile</string>
    <string name="user_nickname">Seojin Kim</string>
    <string name="user_bio">웃자!</string>
    <string name="signup_btn">회원가입</string>
    <string name="signup_txt">아이디/비밀번호가 없으신가요?</string>
    <string name="login_btn">Log In</string>
    <string name="hint_pw">비밀번호를 입력해주세요</string>
    <string name="hint_id">ID를 입력해주세요</string>
    <string name="txt_id">아이디</string>
    <string name="txt_pw">비밀번호</string>
    <string name="name_txt">이름</string>
    <string name="name_hint">이름을 입력해주세요</string>
    <string name="ghid_txt">깃허브 아이디</string>
    <string name="ghid_hint">ID를 입력해주세요</string>
    <string name="pw_txt">비밀번호</string>
    <string name="pw_hint">비밀번호를 입력해주세요</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_go_following_list">MORE</string>
    <string name="desc_following_list_profile">following list profile</string>
    <string name="signup_sex">성별</string>
    <string name="signup_sex_male">Male</string>
    <string name="signul_sex_female">Female</string>
    <string name="signup_phone">전화번호</string>
    <string name="signup_phone_hint">전화번호를 입력해주세요</string>
    <string name="signup_birth">생년월일</string>
    <string name="signup_text">회원가입</string>
    <string name="following_list">팔로잉 목록</string>
</resources>